--- a/src/components/hp-home/hp-home.less
+++ b/src/components/hp-home/hp-home.less
@@ -5,6 +5,7 @@
   }
   .patient-details{
     display: flex;
+    align-items: center;
   }
   .patient-name, .patient-image {
     flex-basis: 6%;
@@ -12,6 +13,7 @@
   
   .patient-name {
     padding: 0 20px;
+    font-size: 1.5em;
   }
   
   .patient-image {
@@ -20,6 +22,14 @@
       width: 65px;
       background: aliceblue;
       border-radius: 50%;
+    }
+
+    .initials {
+      background: #f9ece5;
+      color: #000000;
+      border-radius: 50%;
+      font-size: 2.5em;
+      padding: 12px;
     }
   }
   .top-card-container {
@@ -34,7 +44,7 @@
         padding: 24px;
         flex-basis: 46%;
         border-radius: 2%;
-        min-height: 400px;
+        min-height: 250px;
         margin-right: 16px;
         .card-image {
           flex-basis: 34%;
@@ -165,9 +175,17 @@
         .patient-name {
           flex: 1;
           flex-basis: 50%;
+          padding: 0 12px;
         }
         .other-details {
           margin-top: 16px;
+        }
+      }
+
+      .patient-image {
+        .initials {
+          font-size: 1.5em;
+          padding: 8px;
         }
       }
 
